test/org/midica/testfiles/failing/channel-negative.midica
INCLUDE inc/instruments.midica

VAR $x = -1
$x  c  /4
